--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://johnc13b.github.io/photo-port",
+  "homepage": "https://johnc13b.github.io/React-Portfolio/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
